# magnifica-humanitas

./: README.md  pyproject.toml
.claude/skills/magnifica-judge/: SKILL.md  judge_prompt.md
.claude/skills/magnifica-judge/examples/: babel.yaml  mixed.yaml  nehemiah.yaml
.claude/skills/magnifica-judge/prompts/: context_assessment.md  mcp.md  skill.md  subagent.md  synthesis.md  system_prompt.md
.github/workflows/: pages.yml
docs/: _config.yml  index.html  main.js  style.css
src/magnifica_humanitas/: __init__.py  cli.py  eval.py  judge.py  models.py  observability.py
src/magnifica_humanitas/loaders/: __init__.py  auto.py  base.py  claude_code.py  codex.py  generic.py  opencode.py
tests/: test_eval.py  test_loaders.py
tests/fixtures/agents-dir/.agents/: coder.yaml  manifest.yaml
tests/fixtures/agents-dir/.agents/modes/: standard.yaml
tests/fixtures/agents-dir/.agents/policies/: cautious.yaml
tests/fixtures/agents-dir/.agents/skills/migration-review/: SKILL.yaml
tests/fixtures/claude-code/: CLAUDE.md
tests/fixtures/claude-code/.claude/: settings.json
tests/fixtures/claude-code/.claude/skills/my-skill/: SKILL.md
tests/fixtures/codex/: AGENTS.md  codex.json  config.toml
tests/fixtures/opencode/: opencode.json
