[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magnifica-humanitas"
version = "0.2.0"
description = "LLM-as-judge for coding agent configurations, grounded in Magnifica Humanitas (2026)"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "llm",
    "llm-as-judge",
    "llm-evaluation",
    "ai-safety",
    "ai-ethics",
    "ai-governance",
    "responsible-ai",
    "ai-alignment",
    "coding-agent",
    "coding-agents",
    "agent-evaluation",
    "agent-configuration",
    "system-prompt-evaluation",
    "claude-code",
    "codex",
    "opencode",
    "mcp",
    "skills",
    "subagents",
    "pydantic-ai",
    "pydantic-evals",
    "logfire",
    "anthropology",
    "magnifica-humanitas",
    "babel",
    "nehemiah",
    "judge",
    "evaluator",
    "humanistic-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    # pydantic-ai[all] includes Anthropic, OpenAI, Google, Mistral, Groq providers
    "pydantic-ai[all]>=0.0.20",
    "pydantic-evals>=0.0.20",
    "logfire[anthropic]>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# tomli is only needed on Python < 3.11 (3.11+ has tomllib built-in)
toml = ["tomli>=2.0; python_version < '3.11'"]

[project.scripts]
mh-judge = "magnifica_humanitas.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/magnifica_humanitas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
